update requirements and add commands for docker.txt

--- a/etc/airlab/requirements.txt
+++ b/etc/airlab/requirements.txt
@@ -5,4 +5,11 @@ apt:
     sshpass
     git
     docker
+    ssh
+    rsync
+    date
+    docker
+    nvidia-container-toolkit
+pip:
+    pyyaml
     
