--- a/etc/airlab/docker/docker-compose.yml
+++ b/etc/airlab/docker/docker-compose.yml
@@ -1,13 +1,16 @@
-version: '3.8'
-
 services:
   app:
     build:
       context: .
       dockerfile: sample.dockerfile
-    container_name: app_container
+    container_name: npapp_container
+    restart: always
     volumes:
-      - $AIRLAB_PATH:$AIRLAB_PATH
+      - ${AIRLAB_PATH}:${AIRLAB_PATH}
       - /tmp/.X11-unix:/tmp/.X11-unix
     ports:
       - "5000:5000"
+    stdin_open: true
+    tty: true
+    environment:
+      - AIRLAB_PATH=${AIRLAB_PATH}
