--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -6,5 +6,5 @@ Architecture: all
 Essential: no
 Maintainer: Kabir Kedia <kabirkedia0111@gmail.com>
 Description: Airlab custom Linux command: A custom command package for Linux to handle various tasks.
-Pre-Depends: curl, lsb-release, python3-pip
-Depends: containerd.io, docker-ce, git, nvidia-container-toolkit, openssh-server, rsync, sshpass, tmux, tmuxp
+Pre-Depends: curl, lsb-release, python3-pip, openssh-server, rsync, sshpass, tmux, tmuxp, git  
+Depends: containerd.io, docker-ce, git
